--- a/blog/templates/blog/blogentry_form.html
+++ b/blog/templates/blog/blogentry_form.html
@@ -31,10 +31,22 @@
       </div>
       <div class="row pt-2">
         <div class="col-lg-12 text-right">
+
+
           {% if object %}
           <input type="submit" class="btn btn-outline-primary" value="Save Changes">
           {% else %}
-          <input type="submit" class="btn btn-outline-primary" value="Post">
+          <div class="btn-group">
+            <input type="submit" class="btn btn-outline-primary" value="Post">
+            
+            <button type="button" class="btn btn-outline-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <span class="sr-only">Toggle Post Options Dropdown</span>
+            </button>
+
+            <div class="dropdown-menu">
+              <input type="submit" class="dropdown-item" value="Post Privately">
+            </div>
+          </div>
           {% endif %}
         </div>
       </div>
