--- a/static_website/templates/static_website/base.html
+++ b/static_website/templates/static_website/base.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="{% static 'static_website/icons.css' %}">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdn.tiny.cloud/1/9lidlfl9gfd74zusr0iykq72dtxk48gnba2vupju5j0gdmfs/tinymce/5/tinymce.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script>
     tinymce.init({
       selector: '#text-editor'
