--- a/blog/templates/blog/blogentry_list.html
+++ b/blog/templates/blog/blogentry_list.html
@@ -28,7 +28,7 @@
     {% if user.is_authenticated %}
     <div class="blog-nav-item">
         <i class="fas fa-edit"></i>
-        <a class="gray-link" href="{% url 'blog:blog-create' '' %}">
+        <a class="gray-link" href="{% url 'blog:blog-create' 'none' %}">
             Write a new Entry
         </a>
     </div>
@@ -69,7 +69,4 @@
     </div>
     {% endfor %}
 </div>
-{% endblock %}
-
-{% block custom_footer_elements %}
 {% endblock %}
