--- a/static_website/templates/static_website/base.html
+++ b/static_website/templates/static_website/base.html
@@ -136,5 +136,6 @@
   });
   </script>
   <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.1.0/email.min.js"></script>
+  <script src="{% static 'blog/js/blogentry_form.js' %}"></script>
 </body>
 </html>
