--- a/blog/templates/blog/blogentry_form.html
+++ b/blog/templates/blog/blogentry_form.html
@@ -35,8 +35,8 @@
 
           {% if object %}
           <div class="custom-control custom-checkbox mr-sm-2" style="display: inline">
-            <input type="checkbox" class="custom-control-input" id="customControlInline">
-            <label class="custom-control-label" for="customControlInline">Make Post Private</label>
+            {{ form.private }}
+            <label class="custom-control-label" for="make-post-private">Make Post Private</label>
           </div>
           <input type="submit" class="btn btn-outline-primary" value="Save Changes">
           {% else %}
