--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -29,11 +29,11 @@
         <div class="col-lg-6">
             <p class="reading-font">
                 {% if blog.private %}
-                <a class="blog-heading-icon preceeding" href="{% url 'static_website:resume' %}">
+                <span class="blog-heading-icon preceeding">
                   <svg>
                     <use href="{% static 'blog/icons/lock.svg#lock' %}"></use>
                   </svg>
-                </a>
+                </span>
                 {% endif %}
                 
                 <a  class="gray-link 
