--- a/blog/templates/blog/blog_base.html
+++ b/blog/templates/blog/blog_base.html
@@ -51,7 +51,7 @@
                             <div class="blog-nav-item">
                                 <i class="fas fa-th-large"></i> 
                                 <a class="gray-link" href="{% url 'blog:user-posts' user.id %}">
-                                    My Posts
+                                    My Blog
                                 </a>
                             </div>
                         {% endblock %}
