--- a/static_website/templates/static_website/index.html
+++ b/static_website/templates/static_website/index.html
@@ -10,7 +10,7 @@
   </p>
   <div class="text-center padding-top">
     <form action="#intro">
-      <button type="submit" id = "introButton" class="btn-outline-gradient text-center">Meet Me</button>
+      <button type="submit" id = "introButton" class="btn-outline-gradient-blue--light text-center">Meet Me</button>
     </form>
   </div>
 </div>
