--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -31,16 +31,16 @@
         {{ message }}
     </div>
     {% endfor %}
-    <form method="POST">
+    <form method="POST" class="text-lg-form-wrapper">
         {% csrf_token %}
         <div class="form-group">
-            <div class="col-lg-6">
+            <div class="col-lg-6 form-center">
                 {{ user_registration_form | crispy }}
             </div>
         </div>
         <div class="form-group">
-            <div class="col-lg-6">
-                <input type="submit" class="btn btn-outline-dark btn-block" value="Create Account">
+            <div class="col-lg-6 form-center padding-top">
+                <input type="submit" class="btn blog-btn btn-block" value="Create Account">
             </div>
         </div>
     </form>
