--- a/static_website/templates/static_website/base.html
+++ b/static_website/templates/static_website/base.html
@@ -6,32 +6,33 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Read up on me, Wassim Katbey, Full-Stack Software Developer. I wrote this website to display my 
-  skillset and accomplishments">
-  <meta name="author" content="Wassim Katbey">
-  <title>Wassim Katbey</title>
-  <link rel="stylesheet" href="{% static 'static_website/buttons.css' %}">
-  <link rel="stylesheet" href="{% static 'static_website/navbar_style.css' %}">
-  <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" 
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Read up on me, Wassim Katbey, Full-Stack Software Developer. I wrote this website to display my
+    skillset and accomplishments">
+    <meta name="author" content="Wassim Katbey">
+    <title>Wassim Katbey</title>
+    <link rel="stylesheet" href="{% static 'static_website/buttons.css' %}">
+    <link rel="stylesheet" href="{% static 'static_website/navbar_style.css' %}">
+    <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link rel="stylesheet" href="{% static 'static_website/custom_stylesheet.css' %}">
-  <link rel="stylesheet" href="{% static 'static_website/fonts.css' %}">
-  <link rel="stylesheet" href="{% static 'static_website/spacing.css' %}">
-  <link rel="stylesheet" href="{% static 'static_website/hero_properties.css' %}">
-  <link rel="stylesheet" href="{% static 'static_website/icons.css' %}">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-  <script>
+    <link rel="stylesheet" href="{% static 'static_website/custom_stylesheet.css' %}">
+    <link rel="stylesheet" href="{% static 'static_website/fonts.css' %}">
+    <link rel="stylesheet" href="{% static 'static_website/spacing.css' %}">
+    <link rel="stylesheet" href="{% static 'static_website/hero_properties.css' %}">
+    <link rel="stylesheet" href="{% static 'static_website/icons.css' %}">
+    <link rel="stylesheet" href="{% static 'static_website/forms.css' %}">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script>
     tinymce.init({
       selector: '#text-editor'
     });
-  </script>
-  {% block head_elements %}
-  {% endblock %}
+    </script>
+    {% block head_elements %}
+    {% endblock %}
 </head>
 <body class="bg-light">
 
