--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -5,54 +5,54 @@
 
 {% block hero-image-type %}
 <div class="hero-blog-image">
-{% endblock %} 
+    {% endblock %}
 
-{% block hero-image-text %}
+    {% block hero-image-text %}
     <div class="container-fluid hero-blog-text">
         <p class="hero-blog-heading text-center">SkyBlue Blogging</p>
         <p class="hero-blog-subheading text-center">
             Your Content, Simplified
         </p>
     </div>
-{% endblock %} 
+    {% endblock %}
 
-{% block blog_heading %}
+    {% block blog_heading %}
     <p class="heading-text padding-top padding-bottom text-center">
         Sign into Your Account
     </p>
-{% endblock %}
+    {% endblock %}
 
-{% block blog_body %}
-<div class="container content-top">
-    {% for message in messages %}
+    {% block blog_body %}
+    <div class="container content-top">
+        {% for message in messages %}
         <div class="alert {{ message.tags }} alert-dismissible" role="alert">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+                <span aria-hidden="true">&times;</span>
             </button>
             {{ message }}
         </div>
-    {% endfor %}
-    <form method="POST">
-        {% csrf_token %}
-        <div class="form-group">
-            <div class="col-lg-6">
-                {{ form | crispy }}
+        {% endfor %}
+        <form method="POST" class="text-lg-form-wrapper">
+            {% csrf_token %}
+            <div class="form-group">
+                <div class="col-lg-6 form-center ">
+                    {{ form | crispy }}
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-lg-6">
-                <input type="submit" class="btn btn-outline-dark btn-block" value="Sign in">
-                <p class="text-muted padding-top">
-                    <a class="gray-link" href="{% url 'user:register' %}">
-                        Don't have an account? Register here
-                    </a>
-                </p>
+            <div class="form-group padding-top">
+                <div class="col-lg-6 form-center">
+                    <input type="submit" class="btn blog-btn btn-block" value="Sign in">
+                    <p class="text-muted padding-top">
+                        <a class="gray-link" href="{% url 'user:register' %}">
+                            Don't have an account? Register here
+                        </a>
+                    </p>
+                </div>
             </div>
-        </div>
-        
-    </form>
-</div>
-{% endblock %}
+        </form>
+    </div>
+    {% endblock %}
 
-{% block custom_footer_elements %}
-{% endblock %}
+    {% block custom_footer_elements %}
+    {% endblock %}
+</div>
