Moved general-purpose styles to a static folder under a new app, dubbed 'sph-style'. The static directory houses a framework.css, a wrapper for all styles included in the app. It provides a framework by which the application uses several different gradient styles for inputs, hero images, and buttons, among other styling tools for spacing, fonts, etc.

--- a/blog/templates/blog/blogentry_confirm_delete.html
+++ b/blog/templates/blog/blogentry_confirm_delete.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block hero-image-type %}
-<div class="hero-blog-image-small delete-confirmation">
+<div class="hero-sub-image hero-sm morning-red">
 {% endblock %} 
 
 {% block hero-image-text %}
