--- a/blog/templates/blog/user_posts.html
+++ b/blog/templates/blog/user_posts.html
@@ -2,7 +2,7 @@
 {% load static %} 
 
 {% block hero-image-type %}
-<div class="hero-blog-image-small user-posts">
+<div class="hero-sub-image hero-sm light-purple">
 {% endblock %} 
 
 {% block hero-image-text %}
