--- a/sph_style/static/sph_style/fonts.css
+++ b/sph_style/static/sph_style/fonts.css
@@ -1,5 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Rajdhani:300,400&display=swap');
+
 :root {
     --gray-link: #696969;
+}
+
+body {
+    font-family: 'Rajdhani', sans-serif;
+}
+
+html {
+    font-size: 16px;
 }
 
 .heading-text {
