--- a/blog/templates/blog/blogentry_form.html
+++ b/blog/templates/blog/blogentry_form.html
@@ -2,7 +2,7 @@
 {% load static %} 
 
 {% block hero-image-type %}
-<div class="hero-blog-image-small write">
+<div class="hero-sub-image hero-sm deep-blue">
 {% endblock %} 
 
 {% block hero-image-text %}
