--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -2,25 +2,15 @@
 {% load static %}
 
 {% block hero-image-type %}
-<div class="hero-resume">
-{% endblock %}
-
-{% block desktop-resume-nav %}
-  <li class="nav-item">
-    <a class="nav-text nav-text--light" href="{% url 'static_website:resume' %}">
-      <svg>
-        <use href="{% static 'static_website/icons/resume.svg#resume' %}"></use>
-      </svg>
-    </a>
-  </li>
+<div class="hero-sub-image blue">
 {% endblock %}
 
 {% block hero-image-text %}
-<div class = "hero-sub-page-text text-center">
-  <p class = "hero-sub-page-heading">
+<div class = "hero-sub-text text-center">
+  <p class = "hero-sub-heading">
     Resume & References
   </p>
-  <p class="hero-sub-page-subheading">
+  <p class="hero-sub-subheading">
     Browse through my skills, education, and experience
   </p>
 </div>
