--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -4,13 +4,13 @@
 
 
 {% block hero-image-type %}
-<div class="hero-blog-image">
+<div class="hero-sub-image red">
     {% endblock %}
 
     {% block hero-image-text %}
-    <div class="container-fluid hero-blog-text">
-        <p class="hero-blog-heading text-center">SkyBlue Blogging</p>
-        <p class="hero-blog-subheading text-center">
+    <div class="container-fluid hero-sub-text">
+        <p class="hero-sub-heading text-center">SkyBlue Blogging</p>
+        <p class="hero-sub-subheading text-center">
             Your Content, Simplified
         </p>
     </div>
@@ -41,7 +41,7 @@
             </div>
             <div class="form-group padding-top">
                 <div class="col-lg-6 form-center">
-                    <input type="submit" class="btn blog-btn btn-block" value="Sign in">
+                    <input type="submit" class="btn btn-borderless-purple btn-block" value="Sign in">
                     <p class="text-muted padding-top">
                         <a class="gray-link" href="{% url 'user:register' %}">
                             Don't have an account? Register here
