--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -3,13 +3,13 @@
 {% load crispy_forms_tags %}
 
 {% block hero-image-type %}
-<div class="hero-blog-image">
+<div class="hero-sub-image red">
 {% endblock %} 
 
 {% block hero-image-text %}
-    <div class="container-fluid hero-blog-text">
-        <p class="hero-blog-heading text-center">SkyBlue Blogging</p>
-        <p class="hero-blog-subheading text-center">
+    <div class="container-fluid hero-sub-text">
+        <p class="hero-sub-heading text-center">SkyBlue Blogging</p>
+        <p class="hero-sub-subheading text-center">
             An Open-Source Platform
         </p>
     </div>
@@ -40,7 +40,7 @@
         </div>
         <div class="form-group">
             <div class="col-lg-6 form-center padding-top">
-                <input type="submit" class="btn blog-btn btn-block" value="Create Account">
+                <input type="submit" class="btn btn-borderless-purple btn-block" value="Create Account">
             </div>
         </div>
     </form>
