--- a/user/templates/user/user_list.html
+++ b/user/templates/user/user_list.html
@@ -2,7 +2,7 @@
 {% load static %} 
 
 {% block hero-image-type %}
-<div class="hero-blog-image-small user-list">
+<div class="hero-sub-image hero-sm noon-blue">
 {% endblock %} 
 
 {% block hero-image-text %}
