--- a/user/templates/user/user_list.html
+++ b/user/templates/user/user_list.html
@@ -1,5 +1,7 @@
 {% extends 'blog/blog_base.html' %} 
-{% load static %} 
+{% load static %}
+
+{% block
 
 {% block hero-image-type %}
 <div class="hero-sub-image hero-sm noon-blue">
