--- a/static_website/templates/static_website/base.html
+++ b/static_website/templates/static_website/base.html
@@ -3,6 +3,7 @@
 {% bootstrap_css %}
 {% bootstrap_javascript jquery='full' %}
 
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -107,23 +108,10 @@
 
 
   <!-- Main Quill library -->
-  <script src="//cdn.quilljs.com/1.3.6/quill.js"></script>
-  <script src="//cdn.quilljs.com/1.3.6/quill.min.js"></script>
 
-  <script>
-  var quill = new Quill('#editor-container', {
-    modules: {
-      toolbar: [
-        [{ header: [1, 2, false] }],
-        ['bold', 'italic', 'underline'],
-        ['image', 'code-block']
-      ]
-    },
-    placeholder: 'Compose an epic...',
-    theme: 'snow'  // or 'bubble'
-  });
-  </script>
-  <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.1.0/email.min.js"></script>
-  <script src="{% static 'blog/js/blogentry_form.js' %}"></script>
+
+    <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.1.0/email.min.js"></script>
+    {% block custom_javascript_includes %}
+    {% endblock %}
 </body>
 </html>
